# chatbot-rag-fastapi

./: .env copy  .gitignore  README.md  config.py  demo.html  load_data.py  main.py  prompt.py  pyproject.toml  rag.py  widget.js
db/: chroma.sqlite3
db/5f15045b-d0b4-49b8-be3e-43dccfbba655/: index_metadata.pickle
documentos/: .~lock.faq.docx#  data_limpia_final.xlsx  faq.docx  ~$data_limpia_final.xlsx
